# data-agent

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_admin_db_foundation.py
app/api/: health.py  query.py
app/core/: config.py  lifespan.py
app/db/: errors.py  schema.py  session.py
app/mcp/: client_manager.py  contracts.py  lifecycle.py
app/models/: __init__.py  audit_log.py  error_report.py  table_policy.py  user.py
app/services/: agent_service.py  context_builder.py  intent_resolver.py  llm_client.py  metadata_service.py  (+6 more)
docs/: README.md  development-protocol.md
mcp_server/: db.py  readonly_query_executor.py  server.py
mcp_tutorial/: client.py  db.py  pyproject.toml  server.py
tests/: conftest.py  test_admin_db_config.py  test_admin_db_lifecycle.py  test_admin_db_startup_failure.py  test_agent_service.py  test_api_query.py  test_app_lifecycle.py  test_app_lifespan_mcp_integration.py  test_audit_log_model.py  test_config.py  test_e2e_golden_query.py  test_error_report_model.py  test_health.py  test_intent_resolver.py  test_llm_client.py  test_mcp_client_manager.py  test_mcp_contracts.py  test_mcp_inspect_schema_formatting.py  test_mcp_inspect_schema_unit.py  test_mcp_lifecycle.py  test_mcp_readonly_query_executor.py  test_mcp_real_target_db.py  test_mcp_server_db.py  test_metadata_retriever.py  test_metadata_service.py  test_plan_validator.py  test_query_planner.py  test_sql_guardrail.py  test_startup_failure.py  test_table_policy_model.py  test_user_model.py
(+53 files in other folders)
