[project]
name = "data-agent-backend"
version = "0.1.0"
description = "FEAT-0001 FastAPI execution/config/lifespan/liveness bootstrap"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic-settings>=2.6,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.27,<1.0",
]
