[project]
name = "data-agent-backend"
version = "0.1.0"
description = "FEAT-0001 FastAPI execution/config/lifespan/liveness bootstrap"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "mcp>=1.28,<2",
    "pyodbc>=5.3,<6",
    "openai>=2.8,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "requires_target_db: requires a live Docker MSSQL target database (TARGET_DB_*)",
    "requires_llm: requires RUN_LLM_TESTS=1 and a configured LLM Provider (LLM_*)",
]
